# emit.web

./: .gitignore  README.md  package-lock.json  package.json  webpack.config.js
back/: API.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
back/crud/: models.py
back/src/: database.py  models.py
back/src/events/: router.py  schemas.py
back/src/scores/: router.py  schemas.py
back/src/students/: router.py  schemas.py
back/src/teams/: router.py  schemas.py
back/src/users/: auth.py  jwt.py  middlewares.py  router.py  schemas.py
frontend/: .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  webpack.config.js
frontend/public/: index.html  sw.js
frontend/src/: index.js
frontend/src/components/: App.js
frontend/src/hooks/: useAuth.js  useFavicon.js  usePageCahce.js  usePagePreloader.js  usePageTitle.js  useScrollToTop.js
frontend/src/services/: authApi.js  authService.js
frontend/src/styles/: Animation.css
frontend/src/utils/: imageManager.js  serviceWorkerRegistration.js
infra/: docker-compose.yml  nginx.conf
src/components/: App.js  ScrollToTop.js
src/components/Footer/: Footer.css  Footer.js
src/components/Header/: Header.css  Header.js
src/components/HeaderBlack/: HeaderBlack.css  HeaderBlack.js
src/context/: AuthContext.js
src/hooks/: UsingScrollToTop.js  useFavicon.js
src/pages/BCPage/: BCPage.css  BCPage.jsx
src/pages/CCEmitPage/: CCEmitPage.css  CCEmitPage.jsx
src/services/: api.js
src/styles/: Animation.css  fonts.css  scrollbar.css
verstka/fonts/: fonts.css
(+78 files in other folders)
